# artgen

./: README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
artgen/: cli.py
src/artgen/: __main__.py  art_templates.json
tests/: test_cli.py
